metadata/force-app/main/default/objects/CustomName_DKvRj__c/CustomName_DKvRj__c.object-meta.xml
<CustomObject>
    <description>Description_bgRwE</description>
    <label>CustomLabel_REDAk</label>
    <nameField>
        <label>CustomLabel_REDAk</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_REDAks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>