metadata/force-app/main/default/objects/CustomName_DKvRj__c/fields/CustomField_eNere__c.field-meta.xml
<CustomField>
    <fullName>CustomField_eNere__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldQunTB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>