metadata/force-app/main/default/objects/CustomName_DKvRj__c/fields/CustomField_ocuhe__c.field-meta.xml
<CustomField>
    <fullName>CustomField_ocuhe__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldjmUMg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>